--- a/webapp/client/less/technologiesCollections.less
+++ b/webapp/client/less/technologiesCollections.less
@@ -179,4 +179,8 @@
     .technologyRemoveButton:hover {
         outline: #df1010 solid @activeButtonBorderWidth;
     }    
+
+    .technologiesContainer{
+        overflow: hidden;
+    }
 }
